fix several fontello icons not showing up correctly

--- a/wdn/templates_4.0/less/layouts/breadcrumbs.less
+++ b/wdn/templates_4.0/less/layouts/breadcrumbs.less
@@ -34,7 +34,7 @@
                     font-style: normal;
                     font-weight: normal;
                     text-indent: 99em;
-                    content: '🔨';
+                    content: '\e903';
                     speak: none;
                     display: inline-block;
                     text-decoration: inherit;
